Center comment time, fix modal scrollbar moving background (maybe)

--- a/Html markup/css/main.css
+++ b/Html markup/css/main.css
@@ -53,4 +53,5 @@ textarea {
 
 .modal-open {
     padding: 0px !important;
+    overflow: inherit !important;
 }
